welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:17: error: type mismatch;
 found   : String("")
 required: java.awt.Color
	var c:Color="";
                    ^