welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
    def hunt(c:Color) {
    while (!estSurBiscuit()) {
    	if (isFacingTrail()) {
    		avance();
    		baisseBrosse();
    		leveBrosse();
    	}
    	else {
    		gauche();
    	}
    }
    prendBiscuit();
}

def isFacingTrail():Boolean = {
	var c:Color="";
		if (estFaceMur()) {
			return false;
		}
		avance();
		if (getCouleurSol()=="c") {
			recule();
			return true;
		}
		else {
			recule();
			return false
		}
}        



